# collector

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  conf.example.yaml  docker-compose.yml  event.json  run.sh
.github/workflows/: release.yml  test-act.yml
scripts/: common.sh
scripts/deploy/: deploy.sh  install.sh  service.sh
scripts/dev/: check.sh  dev.sh  release.sh  test.sh  watch.sh
scripts/openrc/: collector
scripts/systemd/: collector.service
scripts/utils/: e2e.sh  health.sh  status.sh
src/: main.rs
